--- a/weather.yml
+++ b/weather.yml
@@ -14,4 +14,30 @@
       service:
         name: docker
         state: started
-      become: yes                                                                                                                                                ~
+      become: yes
+
+    - name: export image
+      shell: "docker save weather:latest > /tmp/weather.tar"
+      become: yes
+      delegate_to: 127.0.0.1
+
+    - name: set permissions
+      file:
+        path: /tmp/weather.tar
+        owner: ubuntu
+        group: ubuntu
+        mode: '0777'
+      become: yes
+      delegate_to: 127.0.0.1
+
+    - name: Copy Docker image to remote location
+      copy:
+        src: /tmp/weather.tar
+        dest: /tmp/weather.tar
+
+    - name: Load Docker image
+      docker_image:
+        name: weather
+        tag: latest
+        load_path: /tmp/weather.tar
+      become: yes
